--- a/onerepahead/package.json
+++ b/onerepahead/package.json
@@ -7,8 +7,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
+    "react-auth-kit": "^2.12.5",
+    "react-dnd": "^16.0.1",
+    "react-dnd-touch-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-swipeable": "^7.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
